--- a/.env
+++ b/.env
@@ -38,3 +38,12 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=smtp://2639bbbbcd97e8:180068265408f3@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
+
+###> symfony/twilio-notifier ###
+# TWILIO_DSN=twilio://SID:TOKEN@default?from=FROM
+###< symfony/twilio-notifier ###
