--- a/.env
+++ b/.env
@@ -47,3 +47,13 @@ MAILER_DSN=smtp://2639bbbbcd97e8:180068265408f3@sandbox.smtp.mailtrap.io:2525
 ###> symfony/twilio-notifier ###
 # TWILIO_DSN=twilio://SID:TOKEN@default?from=FROM
 ###< symfony/twilio-notifier ###
+
+###> symfony/mercure-bundle ###
+# See https://symfony.com/doc/current/mercure.html#configuration
+# The URL of the Mercure hub, used by the app to publish updates (can be a local URL)
+MERCURE_URL=https://localhost:3000/.well-known/mercure
+# The public URL of the Mercure hub, used by the browser to connect
+MERCURE_PUBLIC_URL=https://lifelinehope.com/.well-known/mercure
+# The secret used to sign the JWTs
+MERCURE_JWT_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOlsiKiJdfX0.oZAtTExhwHspzzq4xwAjHFq55dvriO6mD4Jg_1dLlJs
+###< symfony/mercure-bundle ###
