--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
+  "scripts": {
+    "dev": "encore dev"
+  },
   "dependencies": {
-    "leaflet": "^1.9.4"
+    "bootstrap": "^5.3.3",
+    "leaflet": "^1.9.4",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@hotwired/stimulus": "^3.0.0",
     "@hotwired/turbo": "^7.1.1 || ^8.0",
     "@symfony/stimulus-bridge": "^3.2.0",
-    "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets"
+    "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
+    "@symfony/webpack-encore": "^4.6.1",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.0.0",
+    "webpack-notifier": "^1.15.0"
   }
 }
